# web3-exploration

arbitrage/: 1inch_swap_arbitrage.ts  README.md  arb.go  bad_pairs.json  coingecko.json  gemini.json  nftx.json  yearn.json
dapp_analyze/: analyze.ts  dappradar_parse.ts  dappradar_trending.csv  dapps.csv
dapp_analyze/dappradar_api_results/: page1.json  page2.json  page3.json  page4.json  page5.json  page6.json  page7.json  page8.json
kunalm.xyz/: .eleventy.js  index.njk  package.json
kunalm.xyz/_includes/layouts/: base.njk  markdown.css  post.njk  prism.css  style.css
kunalm.xyz/posts/: dune-opensea.md  flash-loans.md  hello-world.md  ipfs-website.md  zksnark-battleship.md
solana/anchor-vote/: Anchor.toml  README.md
solana/anchor-vote/programs/anchor-vote/: Cargo.toml
solana/anchor-vote/programs/anchor-vote/src/: lib.rs
solana/anchor-vote/tests/: anchor-vote.ts
solana/rust-vote/: README.md  package.json
solana/rust-vote/program/: Cargo.toml
solana/rust-vote/program/src/: lib.rs
solana/rust-vote/program/tests/: test.rs
