[package]
name = "program"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.9.1"

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "1.9.1"
solana-sdk = "1.9.1"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
